--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,10 @@ jobs:
       - run:
           name: "Install Pre-requisites"
           command: |
-            sudo apt-get install -y pip3 
+            sudo apt-get install software-properties-common
+            sudo apt-add-repository universe
+            sudo apt-get update
+            sudo apt-get install python-pip
 
       - checkout
 
