--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,13 @@
 version: 2.1
+orbs:
+  python: circleci/python@3.0.0
 jobs:
   deploy-image:
     machine:
       image: ubuntu-2204:current
 
     steps:
-      - run:
-          name: "Install Pre-requisites"
-          command: |
-            sudo apt-get install software-properties-common
-            sudo apt-add-repository universe
-            sudo apt-get update
-            sudo apt-get install python-pip
-
+    
       - checkout
 
       - run:
