--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  python: circleci/python@3.0.0
+  python: circleci/python@2.1.0
 jobs:
   deploy-image:
     machine:
@@ -13,8 +13,8 @@ jobs:
       - run:
           name: "Deploy"
           command: |
-            pip3 install cfstack tabulate
-            python3 execute.py 
+            pip install cfstack tabulate
+            python execute.py 
 
 
 workflows:
