--- a/templates/mumbai/nodeapp/application.json
+++ b/templates/mumbai/nodeapp/application.json
@@ -6,7 +6,7 @@
           "Type": "String"
         },
         "Image":{
-          "Description": "The image for ndoeapp",
+          "Description": "The image for nodeapp",
           "Type": "String"
         }
       },
