--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,9 +1,8 @@
 name: Build and Deploy Pipeline
 run-name: ${{ github.ref_name }}-${{ github.run_number }}
 on:
-  push:
-    branches: 
-     - 'master' 
+  workflow_dispatch:
+    
 permissions:
   id-token: write
   contents: read
