--- a/templates/mumbai/mongo/application.json
+++ b/templates/mumbai/mongo/application.json
@@ -264,11 +264,7 @@
                 "DeploymentController":{"Type" :"ECS"},
                 "DeploymentConfiguration": {
                     "MaximumPercent": 100,
-                    "MinimumHealthyPercent": 0,
-                    "DeploymentCircuitBreaker": {
-                        "Enable" : true,
-                        "Rollback" : true
-                      }
+                    "MinimumHealthyPercent": 0
                 },
                 "PlacementConstraints":[
                     {
@@ -302,11 +298,7 @@
                 "DeploymentController":{"Type" :"ECS"},
                 "DeploymentConfiguration": {
                     "MaximumPercent": 100,
-                    "MinimumHealthyPercent": 0,
-                    "DeploymentCircuitBreaker": {
-                        "Enable" : true,
-                        "Rollback" : true
-                      }
+                    "MinimumHealthyPercent": 0
                 },
                 "PlacementConstraints":[
                     {
@@ -340,11 +332,7 @@
                 "DeploymentController":{"Type" :"ECS"},
                 "DeploymentConfiguration": {
                     "MaximumPercent": 100,
-                    "MinimumHealthyPercent": 0,
-                    "DeploymentCircuitBreaker": {
-                        "Enable" : true,
-                        "Rollback" : true
-                    }
+                    "MinimumHealthyPercent": 0
                 },
                 "PlacementConstraints":[
                     {
