--- a/templates/mumbai/mongo/application.json
+++ b/templates/mumbai/mongo/application.json
@@ -237,10 +237,14 @@
                             "--url",
                             "http://localhost:27017",
                             "--no-autoupdate",
-                            "--token",
-                            "${CLOUDFLARED_MONGO_TUNNEL_TOKEN}",
                             "run"
                         ],
+                        "Secrets": [
+                            {
+                            "Name": "TUNNEL_TOKEN",
+                            "Value": "${CLOUDFLARED_MONGO_TUNNEL_TOKEN}"
+                            }
+                        ]
                         "MemoryReservation": "256",
                         "Name": "Cloudflared",
                         "Privileged": false,
