--- a/templates/mumbai/mongo/application.json
+++ b/templates/mumbai/mongo/application.json
@@ -464,6 +464,7 @@
             "Type" : "AWS::EC2::Volume",
             "Properties" : {
                 "Size" : "8",
+                "AvailabilityZone":"ap-south-1a",
                 "VolumeType" : "gp2"
               }
           },
