--- a/templates/mumbai/mongo/application.json
+++ b/templates/mumbai/mongo/application.json
@@ -467,7 +467,16 @@
                 "AvailabilityZone":"ap-south-1a",
                 "VolumeType" : "gp2"
               }
-          },
+        },
+        "ApplicationSideEncryptedVolume":{
+            "Type" : "AWS::EC2::Volume",
+            "Properties" : {
+                "Encrypted":true,
+                "AvailabilityZone":"ap-south-1a",
+                "VolumeType" : "gp2",
+                "SnapshotId":"snap-082f80f52cf0d71a1"
+              }
+        },
         "ApplicationInstanceSecondary1":{
             "Type":"AWS::EC2::Instance",
             "Properties":{
@@ -501,7 +510,7 @@
                     {
                         "Device" : "/dev/sdf",
                         "VolumeId" : {
-                            "Ref":"ApplicationSideVolume"
+                            "Ref":"ApplicationSideEncryptedVolume"
                         }
                     }
                 ],
