adding encrypted volume and attaching it

--- a/templates/mumbai/mongo/application.json
+++ b/templates/mumbai/mongo/application.json
@@ -468,12 +468,43 @@
                 "VolumeType" : "gp2"
               }
         },
+        "ApplicationSideEncryptedVolume":{
+            "Type" : "AWS::EC2::Volume",
+            "Properties" : {
+                "Encrypted":true,
+                "AvailabilityZone":"ap-south-1a",
+                "KmsKeyId" : {
+                    "Fn::GetAtt":[
+                        "ApplicationKey",
+                        "KeyId"
+                    ]
+                },
+                "VolumeType" : "gp2",
+                "SnapshotId":"snap-0eeddf761cbd6c205"
+              }
+        },
         "ApplicationInstanceSecondary1":{
             "Type":"AWS::EC2::Instance",
             "Properties":{
                 "ImageId":{
                     "Ref":"MongoAmiId"
                 },
+                "BlockDeviceMappings" : [ 
+                    {
+                        "DeviceName" : "/dev/xvda",
+                        "Ebs" : {
+                            "DeleteOnTermination" : true,
+                            "Encrypted" : true,
+                            "KmsKeyId" : {
+                                "Fn::GetAtt":[
+                                    "ApplicationKey",
+                                    "KeyId"
+                                ]
+                            },
+                            "VolumeType" : "gp2"
+                        }
+                    }                      
+                ],
                 "InstanceType":"t2.micro",
                 "IamInstanceProfile": {
                     "Ref": "ApplicationInstacneIamProfile"
@@ -485,7 +516,7 @@
                     {
                         "Device" : "/dev/sdf",
                         "VolumeId" : {
-                            "Ref":"ApplicationSideVolume"
+                            "Ref":"ApplicationSideEncryptedVolume"
                         }
                     }
                 ],
