--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,7 +17,9 @@ jobs:
           aws-region: us-east-1
       - uses: actions/checkout@v3
       - name: Build Templates
-        run: go run main.go
+        run: |
+          go mod tidy
+          go run main.go
       - name: install dependencies
         run: pip3 install cfstack tabulate
       - name: Replace Secrets from Github actions
