--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build Templates
         run: |
+          go mod init
           go run main.go
       - name: install dependencies
         run: pip3 install cfstack tabulate
