--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,7 +18,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build Templates
         run: |
-          go mod init github.com/cloudformation
+          go mod init github.com/Yashprime1/genzinfra-cloudformation
+          go mod tidy
           go run main.go
       - name: install dependencies
         run: pip3 install cfstack tabulate
