adding stack base requirements

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,10 @@ on:
 env:
   CF_STACK_VERSION: 0.2.17
 
+
+permissions:
+  id-token: write
+
 jobs:
   diff:
     concurrency:
@@ -25,7 +29,7 @@ jobs:
           private_key: ${{ secrets.DUMMY_BOT_PRIVATE_ACCESS_KEY }}
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v3
+        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502
         with:
           role-to-assume: arn:aws:iam::736548753645:role/GithubRole
           aws-region: ap-northeast-2
