adding eu1 sharedresources in dev mode

--- a/prod.manifest.json
+++ b/prod.manifest.json
@@ -22,7 +22,8 @@
                     "Action": "CREATE",
                     "TemplatePath": "templates/sharedresources/sharedresources.json",
                     "Parameters": {
-                      "NetworkStack": "eu1"
+                      "NetworkStack": "eu1",
+                      "StackProvisioningMode": "dev"
                     },
                     "StackPolicy": {}
                   }
