--- a/prod.manifest.json
+++ b/prod.manifest.json
@@ -53,6 +53,19 @@
                       "NetworkStack": "eu1"
                     },
                     "StackPolicy": {}
+                  },
+                  {
+                    "StackName": "eu1-Callsock-1-Service",
+                    "Action": "CREATE",
+                    "TemplatePath": "templates/callsock/callsock-ping-service.json",
+                    "Parameters": {
+                      "NetworkStack": "eu1",
+                      "CPU": "8192",
+                      "Memory": "16384",
+                      "MinTasks": "2",
+                      "MaxTasks": "10"
+                    },
+                    "StackPolicy": {}
                   }
             ]
         }
