adding callsock service stack

--- a/prod.manifest.json
+++ b/prod.manifest.json
@@ -93,15 +93,31 @@
                   {
                     "StackName": "eu1-Callsock-1-Service",
                     "Action": "CREATE",
-                    "TemplatePath": "templates/callsock/callsock-ping-service.json",
+                    "TemplatePath": "templates/callsock/callsock-service.json",
                     "Parameters": {
                       "NetworkStack": "eu1",
+                      "ContainerTag": "{{ ContainerTag }}",
+                      "AsteriskContainerTag": "{{ AsteriskImageTag }}",
+                      "DesiredCount": "14",
+                      "PostgresContainerTag" : "{{ PostgresContainerTag }}",
+                      "SplunkForwarderImageTag": "{{ SplunkForwarderImageTag }}",
+                      "SplunkForwarderImageName": "splunk-forwarder",
                       "CPU": "8192",
                       "Memory": "16384",
                       "MinTasks": "2",
-                      "MaxTasks": "10"
+                      "MaxTasks": "10",
+                      "MongoDirectCallHosts": "10.11.13.132:27017,10.11.13.148:27017,10.11.13.164"
                     },
-                    "StackPolicy": {}
+                    "StackPolicy": {
+                      "Statement": [
+                        {
+                          "Action": "Update:*",
+                          "Effect": "Allow",
+                          "Principal": "*",
+                          "Resource": "*"
+                        }
+                      ]
+                    }
                   }
             ]
         }
