--- a/prod.manifest.json
+++ b/prod.manifest.json
@@ -45,6 +45,94 @@
                       "StackProvisioningMode": "dev"
                     },
                     "StackPolicy": {}
+                  },
+                  {
+                    "StackName": "eu1-Mongo-Directcall-1",
+                    "Action": "CREATE",
+                    "TemplatePath": "templates/mongo/eu1/eu1-Mongo-Directcall-1/eu1-Mongo-Directcall-1.json",
+                    "Parameters": {},
+                    "StackPolicy": {}
+                  },
+                  {
+                    "StackName": "eu1-Mongo-Directcall-1-Service",
+                    "Action": "CREATE",
+                    "TemplatePath": "templates/mongo/eu1/eu1-Mongo-Directcall-1/eu1-Mongo-Directcall-1-Service.json",
+                    "Parameters": {
+                      "ContainerTag": "{{ ContainerTag }}",
+                      "SensuClientImageName": "sensu",
+                      "SensuClientImageTag": "{{ SensuClientImageTag }}",
+                      "SplunkForwarderImageName": "splunk-forwarder",
+                      "SplunkForwarderImageTag": "{{ SplunkForwarderImageTag }}",
+                      "CadvisorImageName": "clevertap/cadvisor",
+                      "CadvisorImageTag": "{{ CadvisorImageTag }}",
+                      "SensuClientContainerTag": "{{ SensuClientContainerTag }}",
+                      "SensuV2BackendUrl": "wss://sensu-v2-backend.clevertap.net",
+                      "MongoContainerTag101113132": "{{ MongoContainerTag101113132 }}",
+                      "MongoContainerTag101113148": "{{ MongoContainerTag101113148 }}",
+                      "MongoContainerTag101113164": "{{ MongoContainerTag101113164 }}"
+                    },
+                    "StackPolicy": {
+                      "Statement": [
+                        {
+                          "Effect": "Allow",
+                          "Action": "Update:*",
+                          "Principal": "*",
+                          "Resource": "*"
+                        }
+                      ]
+                    }
+                  },
+                  {
+                    "StackName": "eu1-Redis-Directcall-1",
+                    "Action": "CREATE",
+                    "TemplatePath": "templates/redis-directcall/Redis-Directcall.json",
+                    "Parameters": {
+                      "NetworkStack": "eu1",
+                      "DirectcallElastiCacheAzAEc2SubnetCidrBlock": "10.11.41.0/28",
+                      "DirectcallElastiCacheAzBEc2SubnetCidrBlock": "10.11.41.16/28",
+                      "DirectcallElastiCacheRelicationGroupCacheNodeType": "cache.r5.xlarge",
+                      "DirectcallElastiCacheRelicationGroupCacheParameterGroupName": "default.redis5.0",
+                      "DirectcallElastiCacheRelicationGroupEngineVersion": "5.0.6",
+                      "DirectcallElastiCacheRelicationGroupNumCacheClusters": "2",
+                      "DirectcallElastiCacheRelicationGroupId": "DirectcallElastiCacheRelicationGroup"
+                    },
+                    "StackPolicy": {}
+                  },
+                  {
+                    "StackName": "eu1-Callsock-1",
+                    "Action": "CREATE",
+                    "TemplatePath": "templates/callsock/callsock.json",
+                    "Parameters": {
+                      "NetworkStack": "eu1"
+                    },
+                    "StackPolicy": {}
+                  },
+                  {
+                    "StackName": "eu1-Callsock-1-Service",
+                    "Action": "CREATE",
+                    "TemplatePath": "templates/callsock/callsock-service.json",
+                    "Parameters": {
+                      "NetworkStack": "eu1",
+                      "ContainerTag": "{{ ContainerTag }}",
+                      "AsteriskContainerTag": "{{ AsteriskImageTag }}",
+                      "DesiredCount": "1",
+                      "PostgresContainerTag" : "{{ PostgresContainerTag }}",
+                      "CPU": "8192",
+                      "Memory": "16384",
+                      "MinTasks": "2",
+                      "MaxTasks": "10",
+                      "MongoDirectCallHosts": "10.11.13.132:27017,10.11.13.148:27017,10.11.13.164"
+                    },
+                    "StackPolicy": {
+                      "Statement": [
+                        {
+                          "Action": "Update:*",
+                          "Effect": "Allow",
+                          "Principal": "*",
+                          "Resource": "*"
+                        }
+                      ]
+                    }
                   }
             ]
         }
