--- a/prod.manifest.json
+++ b/prod.manifest.json
@@ -109,7 +109,8 @@
                     "Action": "CREATE",
                     "TemplatePath": "templates/callsock/callsock.json",
                     "Parameters": {
-                      "NetworkStack": "eu1"
+                      "NetworkStack": "eu1",
+                      "EnableEfsCertbotAutomatedSetup":"true"
                     },
                     "StackPolicy": {}
                   },
