--- a/prod.manifest.json
+++ b/prod.manifest.json
@@ -109,18 +109,13 @@
                   {
                     "StackName": "eu1-Callsock-1-Service",
                     "Action": "CREATE",
-                    "TemplatePath": "templates/callsock/callsock-service.json",
+                    "TemplatePath": "templates/callsock/callsock-ping-service.json",
                     "Parameters": {
                       "NetworkStack": "eu1",
-                      "ContainerTag": "{{ ContainerTag }}",
-                      "AsteriskContainerTag": "{{ AsteriskImageTag }}",
-                      "DesiredCount": "1",
-                      "PostgresContainerTag" : "{{ PostgresContainerTag }}",
                       "CPU": "8192",
                       "Memory": "16384",
                       "MinTasks": "2",
-                      "MaxTasks": "10",
-                      "MongoDirectCallHosts": "10.11.13.132:27017,10.11.13.148:27017,10.11.13.164"
+                      "MaxTasks": "10"
                     },
                     "StackPolicy": {
                       "Statement": [
