semaphore: Adding a fix for daily setup script
SNE-48791

--- a/prod.manifest.json
+++ b/prod.manifest.json
@@ -110,7 +110,8 @@
                     "TemplatePath": "templates/callsock/callsock.json",
                     "Parameters": {
                       "NetworkStack": "eu1",
-                      "EnableEfsCertbotAutomatedSetup":"true"
+                      "EnableEfsCertbotAutomatedSetup":"true",
+                      "EnableNotificationSetupForCallSockServiceScalingAlarms": "true"
                     },
                     "StackPolicy": {}
                   },
