--- a/.github/workflows/artifactory-cleanup.yml
+++ b/.github/workflows/artifactory-cleanup.yml
@@ -16,30 +16,16 @@ env:
   ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
   ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
   ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
-  VALUES_JSON_PATH: "cloudformation/configuration/values.json"  # Adjust path as needed
+  VALUES_JSON_PATH: "values.json"  # Adjust path as needed
 
 jobs:
   analyze-containers:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Generate GitHub App Token
-      id: generate-github-token
-      uses: tibdex/github-app-token@v1.8.0
-      with:
-        app_id: ${{ secrets.CLEVERTAP_SNE_BOT_ID }}
-        private_key: ${{ secrets.CLEVERTAP_SNE_BOT_PRIVATE_ACCESS_KEY }}
-
     - name: Checkout Infra-Actions Repository
       uses: actions/checkout@v3
-
-    - name: Checkout CloudFormation Configuration Repository
-      uses: actions/checkout@v3
-      with:
-        repository: CleverTap-SNE/Cloudformation-Configuration
-        path: cloudformation/configuration
-        token: ${{ steps.generate-github-token.outputs.token }}
-
+      
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
